[gd_scene load_steps=44 format=2]

[ext_resource path="res://Scripts/UI/Minimap.gd" type="Script" id=1]
[ext_resource path="res://Scenes/UI/Help.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/UI/TimePanel.gd" type="Script" id=3]
[ext_resource path="res://Assets/Style/small_text.tres" type="Theme" id=4]
[ext_resource path="res://Assets/Style/Pixellari_style.tres" type="Theme" id=5]
[ext_resource path="res://Assets/Icons/AttackAction_Icon.png" type="Texture" id=6]
[ext_resource path="res://Assets/Icons/ExplosiveAction_Icon.png" type="Texture" id=7]
[ext_resource path="res://Assets/Icons/EvolveShield_Icon.png" type="Texture" id=8]
[ext_resource path="res://Assets/Style/button_styleboxflat_hover.tres" type="StyleBox" id=9]
[ext_resource path="res://Assets/Icons/EvolveAttack_Icon.png" type="Texture" id=10]
[ext_resource path="res://Assets/Icons/EvolveBlack_Icon.png" type="Texture" id=11]
[ext_resource path="res://Assets/Icons/mineral_1.png" type="Texture" id=12]
[ext_resource path="res://Assets/Icons/CreateSimpeMushroom_Icon.png" type="Texture" id=13]
[ext_resource path="res://Scenes/UI/Settings.tscn" type="PackedScene" id=14]
[ext_resource path="res://Assets/Style/button_styleboxflat.tres" type="StyleBox" id=15]
[ext_resource path="res://Assets/Fonts/LanaPixel_NoKorean.ttf" type="DynamicFontData" id=16]
[ext_resource path="res://Assets/Fonts/Pixellari.ttf" type="DynamicFontData" id=17]
[ext_resource path="res://Assets/Style/inter_small.tres" type="Theme" id=18]
[ext_resource path="res://Scripts/UI/HUD_menu.gd" type="Script" id=19]
[ext_resource path="res://Scripts/UI/HUD.gd" type="Script" id=20]

[sub_resource type="DynamicFont" id=16]
size = 100
font_data = ExtResource( 17 )

[sub_resource type="Theme" id=6]
default_font = SubResource( 16 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0, 0, 0, 0.784314 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.196078, 0.196078, 0.196078, 1 )

[sub_resource type="DynamicFont" id=46]
font_data = ExtResource( 16 )

[sub_resource type="Theme" id=47]
TooltipLabel/fonts/font = SubResource( 46 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0, 0, 0, 0.784314 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.196078, 0.196078, 0.196078, 1 )

[sub_resource type="InputEventAction" id=38]
action = "BUILD"

[sub_resource type="ShortCut" id=39]
shortcut = SubResource( 38 )

[sub_resource type="InputEventAction" id=20]
action = "E_ATTACKER"

[sub_resource type="ShortCut" id=40]
shortcut = SubResource( 20 )

[sub_resource type="InputEventAction" id=41]
action = "E_BOMB"

[sub_resource type="ShortCut" id=23]
shortcut = SubResource( 41 )

[sub_resource type="InputEventAction" id=43]
action = "E_DEFENDER"

[sub_resource type="ShortCut" id=44]
shortcut = SubResource( 43 )

[sub_resource type="InputEventAction" id=28]
action = "ATTACK"

[sub_resource type="ShortCut" id=45]
shortcut = SubResource( 28 )

[sub_resource type="InputEventAction" id=24]
action = "EXPLODE"

[sub_resource type="ShortCut" id=25]
shortcut = SubResource( 24 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0, 0, 0, 0.784314 )
corner_radius_bottom_right = 10

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0, 0, 0, 0.784314 )
corner_radius_top_left = 10

[sub_resource type="StyleBoxFlat" id=11]
content_margin_left = 5.0
content_margin_right = 2.0
content_margin_top = 2.0
bg_color = Color( 0, 0, 0, 0.588235 )
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=12]
content_margin_left = 5.0
content_margin_right = 2.0
content_margin_top = 2.0
bg_color = Color( 0, 0, 0, 0.588235 )
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=13]
content_margin_left = 5.0
content_margin_right = 2.0
content_margin_top = 2.0
bg_color = Color( 0, 0, 0, 0.784314 )
corner_radius_bottom_left = 10

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 20 )

[node name="Label" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -170.0
margin_top = -50.0
margin_right = 170.0
margin_bottom = 50.0
theme = SubResource( 6 )
align = 1
valign = 1
uppercase = true

[node name="Minimap" type="PanelContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -200.0
margin_right = 300.0
custom_styles/panel = SubResource( 9 )

[node name="MarginContainer" type="MarginContainer" parent="Minimap"]
margin_left = 5.0
margin_top = 5.0
margin_right = 295.0
margin_bottom = 195.0
rect_clip_content = true

[node name="Control" type="Control" parent="Minimap/MarginContainer"]
margin_right = 290.0
margin_bottom = 190.0
script = ExtResource( 1 )
camera_node = NodePath("../../../../Camera2D")
tilemap_nodes = [ NodePath("../../../../floor") ]
fog_node = NodePath("../../../../fog")
cell_colors = {
1: Color( 0.686275, 0.85098, 0.501961, 1 ),
4: Color( 0.682353, 0.811765, 0.807843, 1 ),
5: Color( 0.360784, 0.843137, 0.831373, 1 ),
6: Color( 0.8, 0.321569, 0.321569, 1 ),
7: Color( 0.686275, 0.85098, 0.501961, 1 ),
8: Color( 0.329412, 0.215686, 0.215686, 1 ),
10: Color( 0.223529, 0.160784, 0.235294, 1 ),
11: Color( 0.741176, 0.486275, 0.215686, 1 )
}

[node name="Options" type="PanelContainer" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -300.0
margin_top = -200.0
size_flags_horizontal = 2
size_flags_vertical = 2
theme = SubResource( 47 )
custom_styles/panel = SubResource( 10 )

[node name="MarginContainer" type="MarginContainer" parent="Options"]
margin_left = 5.0
margin_top = 5.0
margin_right = 295.0
margin_bottom = 195.0
rect_clip_content = true

[node name="GridContainer" type="GridContainer" parent="Options/MarginContainer"]
margin_right = 290.0
margin_bottom = 190.0
custom_constants/vseparation = 5
custom_constants/hseparation = 5
columns = 3

[node name="Build" type="TextureButton" parent="Options/MarginContainer/GridContainer"]
margin_right = 94.0
margin_bottom = 93.0
hint_tooltip = "Create a standard:
100 minerals"
mouse_filter = 1
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
size_flags_vertical = 3
shortcut_in_tooltip = false
shortcut = SubResource( 39 )
texture_normal = ExtResource( 13 )
expand = true
stretch_mode = 3

[node name="ToAttack" type="TextureButton" parent="Options/MarginContainer/GridContainer"]
margin_left = 99.0
margin_right = 192.0
margin_bottom = 93.0
hint_tooltip = "Evolve into a strike mushroom: 
300 minerals"
mouse_filter = 1
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
size_flags_vertical = 3
shortcut_in_tooltip = false
shortcut = SubResource( 40 )
texture_normal = ExtResource( 10 )
expand = true
stretch_mode = 3

[node name="ToBomb" type="TextureButton" parent="Options/MarginContainer/GridContainer"]
margin_left = 197.0
margin_right = 290.0
margin_bottom = 93.0
hint_tooltip = "Evolve into a bomb: 
500 minerals"
mouse_filter = 1
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
size_flags_vertical = 3
shortcut_in_tooltip = false
shortcut = SubResource( 23 )
texture_normal = ExtResource( 11 )
expand = true
stretch_mode = 3

[node name="ToDefend" type="TextureButton" parent="Options/MarginContainer/GridContainer"]
margin_top = 98.0
margin_right = 94.0
margin_bottom = 190.0
hint_tooltip = "Evolve into a protective mushroom: 
200 minerals"
mouse_filter = 1
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
size_flags_vertical = 3
shortcut_in_tooltip = false
shortcut = SubResource( 44 )
texture_normal = ExtResource( 8 )
expand = true
stretch_mode = 3

[node name="Attack" type="TextureButton" parent="Options/MarginContainer/GridContainer"]
margin_left = 99.0
margin_top = 98.0
margin_right = 192.0
margin_bottom = 190.0
hint_tooltip = "Attack: 150 minerals"
mouse_filter = 1
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
size_flags_vertical = 3
shortcut_in_tooltip = false
shortcut = SubResource( 45 )
texture_normal = ExtResource( 6 )
expand = true
stretch_mode = 3

[node name="Explode" type="TextureButton" parent="Options/MarginContainer/GridContainer"]
margin_left = 197.0
margin_top = 98.0
margin_right = 290.0
margin_bottom = 190.0
hint_tooltip = "BOOM"
mouse_filter = 1
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
size_flags_vertical = 3
shortcut_in_tooltip = false
shortcut = SubResource( 25 )
texture_normal = ExtResource( 7 )
expand = true
stretch_mode = 3

[node name="Menu" type="PanelContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -203.5
margin_top = -205.0
margin_right = 203.5
margin_bottom = 205.0
size_flags_horizontal = 2
size_flags_vertical = 2
custom_styles/panel = SubResource( 10 )
script = ExtResource( 19 )

[node name="MarginContainer" type="MarginContainer" parent="Menu"]
margin_left = 5.0
margin_top = 5.0
margin_right = 402.0
margin_bottom = 405.0
rect_clip_content = true
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="Menu/MarginContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 392.0
margin_bottom = 395.0
custom_constants/separation = 20

[node name="Label" type="Label" parent="Menu/MarginContainer/VBoxContainer"]
margin_right = 387.0
margin_bottom = 62.0
theme = ExtResource( 5 )
text = "K_MENU"
align = 1
valign = 1
uppercase = true

[node name="Back" type="Button" parent="Menu/MarginContainer/VBoxContainer" groups=["ui_buttons"]]
margin_top = 82.0
margin_right = 387.0
margin_bottom = 144.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 15
size_flags_vertical = 15
theme = ExtResource( 5 )
custom_colors/font_color = Color( 0.752941, 0.607843, 0.768627, 1 )
custom_styles/hover = ExtResource( 9 )
custom_styles/pressed = ExtResource( 15 )
custom_styles/focus = ExtResource( 15 )
custom_styles/disabled = ExtResource( 15 )
custom_styles/normal = ExtResource( 15 )
text = "K_BACK"

[node name="Settings" type="Button" parent="Menu/MarginContainer/VBoxContainer" groups=["ui_buttons"]]
margin_top = 164.0
margin_right = 387.0
margin_bottom = 226.0
mouse_default_cursor_shape = 2
theme = ExtResource( 5 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0.752941, 0.607843, 0.768627, 1 )
custom_styles/hover = ExtResource( 9 )
custom_styles/pressed = ExtResource( 15 )
custom_styles/focus = ExtResource( 15 )
custom_styles/disabled = ExtResource( 15 )
custom_styles/normal = ExtResource( 15 )
text = "K_SETTING"

[node name="Help" type="Button" parent="Menu/MarginContainer/VBoxContainer" groups=["ui_buttons"]]
margin_top = 246.0
margin_right = 387.0
margin_bottom = 308.0
mouse_default_cursor_shape = 2
theme = ExtResource( 5 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0.752941, 0.607843, 0.768627, 1 )
custom_styles/hover = ExtResource( 9 )
custom_styles/pressed = ExtResource( 15 )
custom_styles/focus = ExtResource( 15 )
custom_styles/disabled = ExtResource( 15 )
custom_styles/normal = ExtResource( 15 )
text = "K_TUTOR"

[node name="Exit" type="Button" parent="Menu/MarginContainer/VBoxContainer" groups=["ui_buttons"]]
margin_top = 328.0
margin_right = 387.0
margin_bottom = 390.0
mouse_default_cursor_shape = 2
theme = ExtResource( 5 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0.752941, 0.607843, 0.768627, 1 )
custom_styles/hover = ExtResource( 9 )
custom_styles/pressed = ExtResource( 15 )
custom_styles/focus = ExtResource( 15 )
custom_styles/disabled = ExtResource( 15 )
custom_styles/normal = ExtResource( 15 )
text = "K_EXIT"

[node name="Time" type="PanelContainer" parent="."]
margin_right = 50.0
margin_bottom = 28.0
custom_styles/panel = SubResource( 8 )
script = ExtResource( 3 )

[node name="MarginContainer" type="MarginContainer" parent="Time"]
margin_right = 92.0
margin_bottom = 33.0
rect_clip_content = true
custom_constants/margin_right = 8
custom_constants/margin_top = 2
custom_constants/margin_left = 8

[node name="Time" type="Label" parent="Time/MarginContainer"]
margin_left = 8.0
margin_top = 2.0
margin_right = 84.0
margin_bottom = 33.0
rect_min_size = Vector2( 76, 0 )
theme = ExtResource( 4 )
text = "00:00"
align = 1
valign = 1

[node name="Timer" type="Timer" parent="Time/MarginContainer"]

[node name="Resources" type="PanelContainer" parent="."]
anchor_left = 1.0
anchor_top = 0.666
anchor_right = 1.0
anchor_bottom = 0.666
margin_left = -168.0
margin_top = -44.6
margin_bottom = 0.399994
grow_horizontal = 0
grow_vertical = 0
custom_styles/panel = SubResource( 14 )

[node name="MarginContainer" type="MarginContainer" parent="Resources"]
margin_right = 168.0
margin_bottom = 45.0
rect_clip_content = true
custom_constants/margin_right = 8
custom_constants/margin_top = 2
custom_constants/margin_left = 8

[node name="HBoxContainer" type="HBoxContainer" parent="Resources/MarginContainer"]
margin_left = 8.0
margin_top = 2.0
margin_right = 160.0
margin_bottom = 45.0
custom_constants/separation = 3
alignment = 1

[node name="Amount" type="Label" parent="Resources/MarginContainer/HBoxContainer"]
margin_left = 21.0
margin_top = 6.0
margin_right = 106.0
margin_bottom = 37.0
rect_min_size = Vector2( 76, 0 )
theme = ExtResource( 4 )
text = "10000"
valign = 1

[node name="TextureRect" type="TextureRect" parent="Resources/MarginContainer/HBoxContainer"]
margin_left = 109.0
margin_top = 8.0
margin_right = 131.0
margin_bottom = 35.0
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource( 12 )

[node name="MenuBtn" type="Button" parent="." groups=["ui_buttons"]]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -121.0
margin_bottom = 38.0
focus_mode = 0
mouse_default_cursor_shape = 2
theme = ExtResource( 18 )
custom_styles/hover = SubResource( 11 )
custom_styles/pressed = SubResource( 12 )
custom_styles/normal = SubResource( 13 )
enabled_focus_mode = 0
text = "K_MENU"
icon_align = 1

[node name="Settings" parent="." instance=ExtResource( 14 )]
visible = false

[node name="Help" parent="." instance=ExtResource( 2 )]
visible = false

[node name="Error" type="Label" parent="."]
visible = false
anchor_right = 1.0
margin_top = 10.0
margin_bottom = 31.0
theme = ExtResource( 18 )
custom_colors/font_color = Color( 1, 0.819608, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Not Enough Minerals"
align = 1

[connection signal="game_started" from="." to="Time" method="_on_HUD_game_started"]
[connection signal="pressed" from="Options/MarginContainer/GridContainer/Build" to="." method="_on_Action_pressed" binds= [ 0 ]]
[connection signal="pressed" from="Options/MarginContainer/GridContainer/ToAttack" to="." method="_on_Action_pressed" binds= [ 1 ]]
[connection signal="pressed" from="Options/MarginContainer/GridContainer/ToBomb" to="." method="_on_Action_pressed" binds= [ 2 ]]
[connection signal="pressed" from="Options/MarginContainer/GridContainer/ToDefend" to="." method="_on_Action_pressed" binds= [ 3 ]]
[connection signal="pressed" from="Options/MarginContainer/GridContainer/Attack" to="." method="_on_Action_pressed" binds= [ 4 ]]
[connection signal="pressed" from="Options/MarginContainer/GridContainer/Explode" to="." method="_on_Action_pressed" binds= [ 5 ]]
[connection signal="pressed" from="Menu/MarginContainer/VBoxContainer/Back" to="Menu" method="_on_Back_pressed"]
[connection signal="pressed" from="Menu/MarginContainer/VBoxContainer/Settings" to="Menu" method="_on_Settings_pressed"]
[connection signal="pressed" from="Menu/MarginContainer/VBoxContainer/Help" to="Menu" method="_on_Help_pressed"]
[connection signal="pressed" from="Menu/MarginContainer/VBoxContainer/Exit" to="Menu" method="_on_Exit_pressed"]
[connection signal="timeout" from="Time/MarginContainer/Timer" to="Time" method="_on_Timer_timeout"]
[connection signal="pressed" from="MenuBtn" to="Menu" method="_on_MenuBtn_pressed"]
